Only use autoinstall when it did not run previously

--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -112,7 +112,7 @@ while : ; do
 			/etc/init.d/dbus-1 reload
 			/etc/init.d/networking start
 			/etc/init.d/avahi-daemon start
-			touch /etc/.doAutoinstall
+			[ ! -f /home/root/autoinstall.log ] && touch /etc/.doAutoinstall
 			break
 			;;
 		*)
