--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -22,7 +22,7 @@ LIBS=@libdir@/libopen.so.0.0.0
 while : ; do
 	# show bootlogo on enigma2 start
 	if [ -x @bindir@/showiframe ]; then
-		skin=`sed -En 's;config\.skin\.primary_skin=(.+)/skin\.xml;\1;p' @sysconfdir@/enigma2/settings`
+		skin=`sed -En 's|config\.skin\.primary_skin=(.+)/skin\.xml|\1|p' @sysconfdir@/enigma2/settings`
 		if [ -z $skin ]; then
 			skin=`strings -n 10 @prefix@/lib/enigma2/python/skin.pyo | egrep -o -m 1 ".+/skin.xml" | sed 's|/skin.xml.*||'`
 		fi
