--- a/data/fonts/Makefile.am
+++ b/data/fonts/Makefile.am
@@ -4,19 +4,18 @@
 #
 installdir = $(datadir)/fonts
 
-dist_install_DATA = \
-	ae_AlMateen.ttf \
-	andale.ttf \
-	DejaVuSans.ttf \
-	lcd.ttf \
-	md_khmurabi_10.ttf \
-	nmsbd.ttf \
-	LiberationSans-Bold.ttf \
-	LiberationSans-BoldItalic.ttf \
-	LiberationSans-Italic.ttf \
-	LiberationSans-Regular.ttf \
-	wqy-microhei.ttc
+dist_install_DATA = *.ttf
 
+if DM900
+dist_install_DATA += wqy-microhei.ttc
 install-data-hook:
 	cd $(DESTDIR)$(datadir)/fonts && \
 	$(LN_S) wqy-microhei.ttc fallback.font
+endif
+
+if DM920
+dist_install_DATA += wqy-microhei.ttc
+install-data-hook:
+	cd $(DESTDIR)$(datadir)/fonts && \
+	$(LN_S) wqy-microhei.ttc fallback.font
+endif
