--- a/data/encoding.conf
+++ b/data/encoding.conf
@@ -25,6 +25,8 @@ pes UTF-8
 #Fallback encoding when in dvb-text no encoding table is given
 #and no Countrycode  and no transponders configs in this config file
 *   ISO8859-1
+#*  UTF-8
+*   GB18030
 
 #Sorry for that.. in DVB Spec this is the default behavior 
 #when no other encoding is given in dvb-texts..
@@ -32,24 +34,25 @@ pes UTF-8
 #so our default is ISO8859-1 without two char byte encoding
 #So all transponders which needs this must be listed here
 #TSID ONID
-0x00B 0x1111 #Thor 0.8캷
-0x2c1 0x600 #Thor 0.8캷
-0x2c2 0x600 #Thor 0.8캷
-0x2c3 0x600 #Thor 0.8캷
-0x2c4 0x600 #Thor 0.8캷
-0x2be 0x600 #Thor 0.8캷
-0x2bf 0x600 #Thor 0.8캷
-0x2bd 0x600 #Thor 0.8캷
-0x2c0 0x600 #Thor 0.8캷
-0x2c2 0x600 #Thor 0.8캷
-0x2c3 0x600 #Thor 0.8캷
-0x2c4 0x600 #Thor 0.8캷
-0x2c5 0x600 #Thor 0.8캷
-0x2c6 0x600 #Thor 0.8캷
-0x2c7 0x600 #Thor 0.8캷
-0x2c8 0x600 #Thor 0.8캷
-0x436 0x1 # Astra 19.2캞 11.973 V - MTV Networks Europe
-0x42a 0x1 # Astra 19.2캞 11.739 V - MTV Networks Europe
+0x00B 0x1111 #Thor 0.8째W
+0x2c1 0x600 #Thor 0.8째W
+0x2c2 0x600 #Thor 0.8째W
+0x2c3 0x600 #Thor 0.8째W
+0x2c4 0x600 #Thor 0.8째W
+0x2be 0x600 #Thor 0.8째W
+0x2bf 0x600 #Thor 0.8째W
+0x2bd 0x600 #Thor 0.8째W
+0x2c0 0x600 #Thor 0.8째W
+0x2c2 0x600 #Thor 0.8째W
+0x2c3 0x600 #Thor 0.8째W
+0x2c4 0x600 #Thor 0.8째W
+0x2c5 0x600 #Thor 0.8째W
+0x2c6 0x600 #Thor 0.8째W
+0x2c7 0x600 #Thor 0.8째W
+0x2c8 0x600 #Thor 0.8째W
+0xaf2 0xbb #Thor 0.8째W
+0x436 0x1 # Astra 19.2째E 11.973 V - MTV Networks Europe
+0x42a 0x1 # Astra 19.2째E 11.739 V - MTV Networks Europe
 200 318 #Hotbird Eutelsat (Eurosport)
 300 318 #Hotbird Eutelsat (Eurosport, Animal Pl.HD)
 400 318 #Hotbird 13.0 Cyfra+
@@ -104,23 +107,23 @@ pes UTF-8
 #Fallback encoding table for single transponders
 #ISO6937 also enables two byte char encoding
 #TSID ONID ISO8859-X
-20600 126 ISO8859-9 # Digital Platform 7캞
-20700 126 ISO8859-9 # Digital Platform 7캞
-20800 126 ISO8859-9 # Digital Platform 7캞
-20900 126 ISO8859-9 # Digital Platform 7캞
-21000 126 ISO8859-9 # Digital Platform 7캞
-21100 126 ISO8859-9 # Digital Platform 7캞
-41200 126 ISO8859-9 # Digital Platform 7캞
-50100 126 ISO8859-9 # Digital Platform 7캞
-50200 126 ISO8859-9 # Digital Platform 7캞
-50300 126 ISO8859-9 # Digital Platform 7캞
-50400 126 ISO8859-9 # Digital Platform 7캞
-50500 126 ISO8859-9 # Digital Platform 7캞
-50600 126 ISO8859-9 # Digital Platform 7캞
-50700 126 ISO8859-9 # Digital Platform 7캞
-50800 126 ISO8859-9 # Digital Platform 7캞
-50900 126 ISO8859-9 # Digital Platform 7캞
-51000 126 ISO8859-9 # Digital Platform 7캞
+20600 126 ISO8859-9 # Digital Platform 7째E
+20700 126 ISO8859-9 # Digital Platform 7째E
+20800 126 ISO8859-9 # Digital Platform 7째E
+20900 126 ISO8859-9 # Digital Platform 7째E
+21000 126 ISO8859-9 # Digital Platform 7째E
+21100 126 ISO8859-9 # Digital Platform 7째E
+41200 126 ISO8859-9 # Digital Platform 7째E
+50100 126 ISO8859-9 # Digital Platform 7째E
+50200 126 ISO8859-9 # Digital Platform 7째E
+50300 126 ISO8859-9 # Digital Platform 7째E
+50400 126 ISO8859-9 # Digital Platform 7째E
+50500 126 ISO8859-9 # Digital Platform 7째E
+50600 126 ISO8859-9 # Digital Platform 7째E
+50700 126 ISO8859-9 # Digital Platform 7째E
+50800 126 ISO8859-9 # Digital Platform 7째E
+50900 126 ISO8859-9 # Digital Platform 7째E
+51000 126 ISO8859-9 # Digital Platform 7째E
 
 # Fallback encoding table
 # If string has no encoding id, encoding name has a option 'N' or 'NOID' first split by ':',
@@ -137,3 +140,14 @@ pes UTF-8
 #TSID ONID ENFORCE:UTF16LE
 #TSID ONID E:UTF16LE
 #countrycode E:UNICODE
+# provider's custom encoding map
+#   usage:
+# INT ENCODING_NAME
+# eg:
+# 0x16 UTF16BE
+0x001a 0x209e E:UTF16BE # ST2 88E ku-band
+0x001e 0x209e E:UTF16BE # ST2 88E ku-band
+0x0022 0x209e E:UTF16BE # ST2 88E ku-band
+0x0018 0x209e E:UTF16BE # ST2 88E ku-band
+0x0020 0x209e E:UTF16BE # ST2 88E ku-band
+0x001c 0x209e E:UTF16BE # ST2 88E ku-band
