--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -90,6 +90,10 @@ while : ; do
 		6)
 			DEBUG_LVL=4
 			;;
+		16)
+			echo "rescue" > /proc/stb/fp/boot_mode
+			/sbin/reboot
+			;;
 		42)
 			df -P | grep -v "tmpfs " | awk '{print $6}' | tail -n +3 > /tmp/upgrade_mountpoints.txt
 			while read line; do
