--- a/data/rc_models/rc_models.cfg
+++ b/data/rc_models/rc_models.cfg
@@ -137,3 +137,18 @@ h9 zgemma
 h9combo zgemma
 lc sh1
 sh1 sh1
+# Dreambox
+dm8000 dmm0
+dm800 dmm1
+dm800se dmm1
+dm500hd dmm1
+dm7080 dmm2
+dm7020hd dmm2
+dm7020hdv2 dmm2
+dm800sev2 dmm2
+dm500hdv2 dmm2
+dm520 dmm2
+dm820 dmm2
+dm900 dmm2
+dm920 dmm2
+dreamone dmm2
