--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -99,7 +99,11 @@ while : ; do
 			done < /tmp/upgrade_mountpoints.txt
 			# bind the console (when available)
 			[ -f /sys/class/vtconsole/vtcon1/bind ] && echo 1 > /sys/class/vtconsole/vtcon1/bind
-			( opkg upgrade sysvinit && opkg upgrade sysvinit-pidof && opkg upgrade initscripts-functions && opkg upgrade busybox && opkg upgrade kmod && opkg list-upgradable $DESTS | cut -f 1 -d ' ' | xargs opkg upgrade $DESTS ) 2>&1 | tee /home/root/ipkgupgrade.log
+			echo "" > /home/root/ipkgupgrade.log
+			pkgs=`opkg list-upgradable $DESTS | cut -f 1 -d ' '`
+			for pkg in $pkgs; do
+					opkg upgrade $DESTS $pkg 2>&1 | tee -a /home/root/ipkgupgrade.log
+			done
 			/sbin/reboot
 			;;
 		43)
