--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -103,10 +103,10 @@ while : ; do
 			currupd=999
 			opkg update 2>&1 | tee /home/root/ipkgupgrade.log
 			while [ $currupd -gt 0 -a $currupd -ne $prevupd ]; do
-				echo "===> INSTALLING $currupd PACKAGES" >> /home/root/ipkupgrade.log
 				opkg upgrade $DESTS 2>&1 | tee -a /home/root/ipkgupgrade.log
 				prevupd=$currupd
 				currupd=`opkg list-upgradable | wc -l`
+				echo "===> $currupd PACKAGE(S) REMAINING" >> /home/root/ipkupgrade.log
 			done
 			/sbin/reboot
 			;;
@@ -125,7 +125,11 @@ while : ; do
 			/etc/init.d/dbus-1 reload
 			/etc/init.d/networking start
 			/etc/init.d/avahi-daemon start
-			[ ! -f /home/root/autoinstall.log ] && touch /etc/.doAutoinstall
+			if [ ! -f /etc/.doNotAutoinstall ]; then
+				touch /etc/.doAutoinstall
+			else
+				rm -f /etc/.doNotAutoInstall
+			fi
 			break
 			;;
 		*)
