--- a/tools/enigma2.sh.in
+++ b/tools/enigma2.sh.in
@@ -105,9 +105,9 @@ while : ; do
 			[ -f /sys/class/vtconsole/vtcon1/bind ] && echo 1 > /sys/class/vtconsole/vtcon1/bind
 			prevupd=0
 			currupd=999
-			opkg update 2>&1 | tee /home/root/ipkgupgrade.log
+			opkg update 2>&1 | tee /home/root/opkgupgrade.log
 			while [ $currupd -gt 0 -a $currupd -ne $prevupd ]; do
-				opkg upgrade $DESTS 2>&1 | tee -a /home/root/ipkgupgrade.log
+				opkg upgrade $DESTS 2>&1 | tee -a /home/root/opkgupgrade.log
 				prevupd=$currupd
 				currupd=`opkg list-upgradable | wc -l`
 				echo "===> $currupd PACKAGE(S) REMAINING" >> /home/root/ipkupgrade.log
