--- a/data/display/Makefile.am
+++ b/data/display/Makefile.am
@@ -1,4 +1,4 @@
-installdir = $(datadir)/display/skin_default
+installdir = $(pkgdatadir)/display
 
 if HAVE_TEXTLCD
 DISPLAYTYPE = text
@@ -6,10 +6,10 @@ else
 DISPLAYTYPE = display
 endif
 
-dist_pkgdata_DATA = skin_display.xml
+dist_install_DATA = skin_display.xml
 
 # Use box-specific XML if it exists, otherwise get the default
 # TEXTSKIN is either "default" or "7segment"
 # TODO: Missing dependency on optional "skin_$(DISPLAYTYPE)_$(BOXTYPE).xml"
-skin_display.xml: $(srcdir)/skin_$(DISPLAYTYPE)_$(TEXTSKIN).xml
+skin_display.xml:
 	cp $(srcdir)/skin_$(DISPLAYTYPE)_$(BOXTYPE).xml $@ 2>/dev/null || cp $(srcdir)/skin_$(DISPLAYTYPE)_$(TEXTSKIN).xml $@
