--- a/data/encoding.conf
+++ b/data/encoding.conf
@@ -6,6 +6,7 @@ ara ISO8859-6
 tur ISO8859-9
 gre ISO8859-7
 ell ISO8859-7
+hun ISO6937
 pol ISO8859-2
 rus ISO8859-5
 bul ISO8859-5
@@ -25,7 +26,6 @@ pes UTF-8
 #Fallback encoding when in dvb-text no encoding table is given
 #and no Countrycode  and no transponders configs in this config file
 *   ISO8859-1
-*   GB18030
 
 #Sorry for that.. in DVB Spec this is the default behavior 
 #when no other encoding is given in dvb-texts..
@@ -33,23 +33,31 @@ pes UTF-8
 #so our default is ISO8859-1 without two char byte encoding
 #So all transponders which needs this must be listed here
 #TSID ONID
-0x00B 0x1111 #Thor 0.8°W
-0x2c1 0x600 #Thor 0.8°W
-0x2c2 0x600 #Thor 0.8°W
-0x2c3 0x600 #Thor 0.8°W
-0x2c4 0x600 #Thor 0.8°W
-0x2be 0x600 #Thor 0.8°W
-0x2bf 0x600 #Thor 0.8°W
-0x2bd 0x600 #Thor 0.8°W
-0x2c0 0x600 #Thor 0.8°W
-0x2c2 0x600 #Thor 0.8°W
-0x2c3 0x600 #Thor 0.8°W
-0x2c4 0x600 #Thor 0.8°W
-0x2c5 0x600 #Thor 0.8°W
-0x2c6 0x600 #Thor 0.8°W
-0x2c7 0x600 #Thor 0.8°W
-0x2c8 0x600 #Thor 0.8°W
-0xaf2 0xbb #Thor 0.8°W
+701 1536   # 0.8°W 11.727 V
+5 4369     # 0.8°W 11.747 H
+702 1536   # 0.8°W 11.766 V
+703 1536   # 0.8°W 11.804 V
+13 1 ISO8859-2	# 0.8°W 11.823 H
+710 1536   # 0.8°W 11.843 V
+83 70      # 0.8°W 11.881 V
+12 1       # 0.8°W 11.900 H
+711 1536   # 0.8°W 11.919 V
+707 1536   # 0.8°W 11.938 H
+712 1536   # 0.8°W 11.958 V
+2802 187   # 0.8°W 11.977 H
+704 1536   # 0.8°W 11.996 V
+41 70      # 0.8°W 12.015 H
+705 1536   # 0.8°W 12.034 V
+2801 187   # 0.8°W 12.054 H
+706 1536   # 0.8°W 12.073 V
+11 4369    # 0.8°W 12.092 H
+76 70      # 0.8°W 12.149 V
+27 704     # 0.8°W 12.226 V
+709 1536   # 0.8°W 12.265 V
+2806 187   # 0.8°W 12.380 V
+20 70 	   # 0.8°W 12.418 V
+3 4369     # 0.8°W 12.456 V
+1 1        # 0.8°W 12.687 H
 0x436 0x1 # Astra 19.2°E 11.973 V - MTV Networks Europe
 0x42a 0x1 # Astra 19.2°E 11.739 V - MTV Networks Europe
 200 318 #Hotbird Eutelsat (Eurosport)
@@ -132,21 +140,10 @@ pes UTF-8
 #TSID ONID NOID:UTF16LE
 #TSID ONID N:UTF16LE
 #countrycode N:UNICODE
-
+#
 # option 'E' or 'ENFORCE' to skip encoding id in
 #  string, use the value set in here always. e.g:
 #
 #TSID ONID ENFORCE:UTF16LE
 #TSID ONID E:UTF16LE
 #countrycode E:UNICODE
-# provider's custom encoding map
-#   usage:
-# INT ENCODING_NAME
-# eg:
-# 0x16 UTF16BE
-0x001a 0x209e E:UTF16BE # ST2 88E ku-band
-0x001e 0x209e E:UTF16BE # ST2 88E ku-band
-0x0022 0x209e E:UTF16BE # ST2 88E ku-band
-0x0018 0x209e E:UTF16BE # ST2 88E ku-band
-0x0020 0x209e E:UTF16BE # ST2 88E ku-band
-0x001c 0x209e E:UTF16BE # ST2 88E ku-band
