--- a/data/encoding.conf
+++ b/data/encoding.conf
@@ -26,6 +26,7 @@ pes UTF-8
 #Fallback encoding when in dvb-text no encoding table is given
 #and no Countrycode  and no transponders configs in this config file
 *   ISO8859-1
+*   GB18030
 
 #Sorry for that.. in DVB Spec this is the default behavior 
 #when no other encoding is given in dvb-texts..
@@ -147,3 +148,15 @@ pes UTF-8
 #TSID ONID ENFORCE:UTF16LE
 #TSID ONID E:UTF16LE
 #countrycode E:UNICODE
+
+# provider's custom encoding map
+#   usage:
+# INT ENCODING_NAME
+# eg:
+# 0x16 UTF16BE
+0x001a 0x209e E:UTF16BE # ST2 88E ku-band
+0x001e 0x209e E:UTF16BE # ST2 88E ku-band
+0x0022 0x209e E:UTF16BE # ST2 88E ku-band
+0x0018 0x209e E:UTF16BE # ST2 88E ku-band
+0x0020 0x209e E:UTF16BE # ST2 88E ku-band
+0x001c 0x209e E:UTF16BE # ST2 88E ku-band
