configure: add -Warray-bounds=1 warning/error.
We cannot use =2 because generated SWIG code triggers it.

--- a/configure.ac
+++ b/configure.ac
@@ -244,8 +244,10 @@ AC_SUBST(ENIGMA2_CFLAGS)
 AX_CXX_COMPILE_STDCXX_11([ext],[mandatory])
 
 CPPFLAGS="$CPPFLAGS $PYTHON_CPPFLAGS"
-CFLAGS="$CFLAGS -Wall"
-CXXFLAGS="$CXXFLAGS -Wall -Werror $BASE_CFLAGS $ENIGMA2_CFLAGS $PTHREAD_CFLAGS $OPENMP_CFLAGS $ALSA_CFLAGS"
+FLAGS="$CFLAGS -Wall"
+CXXFLAGS="$CXXFLAGS -Wall -Werror \
+						-Warray-bounds=1 \
+						$BASE_CFLAGS $ENIGMA2_CFLAGS $PTHREAD_CFLAGS $OPENMP_CFLAGS $ALSA_CFLAGS"
 
 AC_CONFIG_FILES([
 Makefile
