--- a/configure.ac
+++ b/configure.ac
@@ -246,8 +246,9 @@ AX_CXX_COMPILE_STDCXX_11([ext],[mandatory])
 CPPFLAGS="$CPPFLAGS $PYTHON_CPPFLAGS"
 CFLAGS="$CFLAGS -Wall"
 CXXFLAGS="$CXXFLAGS -Wall -Werror \
-						-Wno-error=stringop-truncation \
 						-Warray-bounds=1 \
+						-Wmaybe-uninitialized -Wdangling-else -Wformat-overflow=2 \
+						-Wno-error=stringop-truncation \
 						$BASE_CFLAGS $ENIGMA2_CFLAGS $PTHREAD_CFLAGS $OPENMP_CFLAGS $ALSA_CFLAGS"
 
 AC_CONFIG_FILES([
