configure: typo FLAGS -> CFLAGS
Fix typo on CFLAGS introduced on https://github.com/OpenPLi/enigma2/commit/eb5e92914389eb63bba8ec28ffaa78d7f0c05b7a

--- a/configure.ac
+++ b/configure.ac
@@ -244,7 +244,7 @@ AC_SUBST(ENIGMA2_CFLAGS)
 AX_CXX_COMPILE_STDCXX_11([ext],[mandatory])
 
 CPPFLAGS="$CPPFLAGS $PYTHON_CPPFLAGS"
-FLAGS="$CFLAGS -Wall"
+CFLAGS="$CFLAGS -Wall"
 CXXFLAGS="$CXXFLAGS -Wall -Werror \
 						-Wno-error=stringop-truncation \
 						-Warray-bounds=1 \
