configure: add more non-Wextra warnings, most of them as errors.
-Wduplicated-branches -Wtrampolines -Wshift-overflow=2 -Wswitch
-Wunused-but-set-parameter -Wunused-const-variable=1 -Wuninitialized
-Wstringop-overflow=3 -Wunsafe-loop-optimizations -Wpointer-arith
-Wattribute-alias=1 -Wfloat-equal -Wno-error=shadow

--- a/configure.ac
+++ b/configure.ac
@@ -247,9 +247,13 @@ CPPFLAGS="$CPPFLAGS $PYTHON_CPPFLAGS"
 CFLAGS="$CFLAGS -Wall"
 CXXFLAGS="$CXXFLAGS -Wall -Werror \
 	-Wformat=2 -Wformat-overflow=2 -Wformat-nonliteral -Wformat-security \
-	-Wimplicit-fallthrough=5 \
-	-Wdangling-else \
-	-Wno-error=stringop-truncation \
+	-Wimplicit-fallthrough=5 -Wduplicated-branches -Wtrampolines \
+	-Wdangling-else -Wshift-overflow=2 -Wswitch \
+	-Wunused-but-set-parameter -Wunused-const-variable=1 -Wuninitialized \
+	-Wstringop-overflow=3 \
+	-Wunsafe-loop-optimizations -Wpointer-arith \
+	-Wattribute-alias=1 -Wfloat-equal \
+	-Wno-error=stringop-truncation -Wno-error=shadow \
 	$BASE_CFLAGS $ENIGMA2_CFLAGS $PTHREAD_CFLAGS $OPENMP_CFLAGS $ALSA_CFLAGS"
 
 AC_CONFIG_FILES([
