configure: add two more non-fatal non-Wextra warnings in GCC: -Wno-error=cast-align=strict -Wno-error=cast-qual

--- a/configure.ac
+++ b/configure.ac
@@ -252,8 +252,9 @@ CXXFLAGS="$CXXFLAGS -Wall -Werror \
 	-Wunused-but-set-parameter -Wunused-const-variable=1 -Wuninitialized \
 	-Wstringop-overflow=3 \
 	-Wunsafe-loop-optimizations -Wpointer-arith \
-	-Wattribute-alias=1 -Wfloat-equal \
-	-Wno-error=stringop-truncation -Wno-error=shadow \
+	-Wattribute-alias=1 -Wfloat-equal -Wlogical-op \
+	-Wno-error=cast-align=strict \
+	-Wno-error=stringop-truncation -Wno-error=shadow -Wno-error=cast-qual \
 	$BASE_CFLAGS $ENIGMA2_CFLAGS $PTHREAD_CFLAGS $OPENMP_CFLAGS $ALSA_CFLAGS"
 
 AC_CONFIG_FILES([
